SSLPersonas initially working with jetpack!

--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "sslpersonas",
   "title": "SSLPersonas",
   "id": "jid1-HDu7h3mFLYeKXw",
-  "description": "a basic add-on",
-  "author": "",
-  "license": "MPL 2.0",
-  "version": "0.1"
+  "description": "SSLPersonas changes Firefox's theme according to the security status of a website.",
+  "author": "Tobi Stockinger",
+  "license": "MIT",
+  "version": "2"
 }
