* extended and styled about page. localization required. * added icon. very basic. very ugly. * added screenshots and added one more. * changed add-on id, to what it used to be before

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "sslpersonas",
+  "name": "sslPersonas",
   "title": "SSLPersonas",
-  "id": "jid1-HDu7h3mFLYeKXw",
+  "id": "sslPersonas@tobitobi.de",
   "description": "SSLPersonas changes Firefox's theme according to the security status of a website.",
   "author": "Tobi Stockinger",
   "license": "MIT",
