--- a/package.json
+++ b/package.json
@@ -3,13 +3,17 @@
   "title": "SSLPersonas",
   "id": "sslPersonas@tobitobi.de",
   "description": "SSLPersonas changes Firefox's theme according to the security status of a website.",
-  "author": "Tobi Stockinger",
+  "author": "Tobi Seitz",
   "license": "MIT",
-  "version": "2.2.0",
+  "version": "2.3.0",
   "main" : "lib/main.js",
   "icon": "data/img/icon/SSLPersonas-Icon-32.png",
   "icon64": "data/img/icon/SSLPersonas-Icon-64.png",
   "homepage":"https://sslpersonas.tobitobi.de",
+  "permissions": {
+    "private-browsing": true,
+    "multiprocess" : true
+  },
   "preferences": [{
     "name": "insecureTheme",
     "title": "Theme for insecure pages",
